--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "js-survey",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "deafult": "index.js",
   "scripts": {
     "start": "parcel serve src/index.html --public-url / --dist-dir dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel ./src/index.html",
+    "prebuild": "npx rimraf build",
+    "build": "parcel build --public-url ./ ./src/index.html --dist-dir ./build"
   },
   "keywords": [],
   "author": "",
